Actualización de descripciones de menús, estilos y footers en la encuesta

--- a/index_conectado_n8n.html
+++ b/index_conectado_n8n.html
@@ -494,92 +494,92 @@
           <div class="menu-option">
             <img src="img/menus/menu1.png" alt="Menú 1" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 1</h4>
-            <p>Descripción del menú 1</p>
+            <h4>Menú 1 – Profesional con Submenús</h4>
+            <p>Un menú moderno con subcategorías desplegables, ideal para agencias, estudios o empresas con varias secciones internas.</p>
             <input type="radio" name="menu_estilo" value="menu1" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu2.png" alt="Menú 2" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 2</h4>
-            <p>Descripción del menú 2</p>
+            <h4>Menú 2 – Sólido y funcional</h4>
+            <p>Diseño robusto con botones bien marcados. Perfecto para negocios locales que necesitan claridad y rapidez.</p>
             <input type="radio" name="menu_estilo" value="menu2" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu3.png" alt="Menú 3" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 3</h4>
-            <p>Descripción del menú 3</p>
+            <h4>Menú 3 – Minimal y elegante</h4>
+            <p>Distribución centralizada y estilo limpio. Muy recomendado para marcas de diseño, arte o arquitectura.</p>
             <input type="radio" name="menu_estilo" value="menu3" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu4.png" alt="Menú 4" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 4</h4>
-            <p>Descripción del menú 4</p>
+            <h4>Menú 4 – Oscuro y elegante</h4>
+            <p>Ideal para tiendas o marcas con productos visuales potentes. Diseño sobrio con un toque exclusivo.</p>
             <input type="radio" name="menu_estilo" value="menu4" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu5.png" alt="Menú 5" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 5</h4>
-            <p>Descripción del menú 5</p>
+            <h4>Menú 5 – Clásico con carácter</h4>
+            <p>Menú horizontal tradicional con detalles gráficos únicos. Transmite profesionalismo con un toque creativo.</p>
             <input type="radio" name="menu_estilo" value="menu5" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu6.png" alt="Menú 6" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 6</h4>
-            <p>Descripción del menú 6</p>
+            <h4>Menú 6 – Creativo y visible</h4>
+            <p>Estilo llamativo con fondo transparente y resaltado dinámico. Perfecto para empresas creativas y startups.</p>
             <input type="radio" name="menu_estilo" value="menu6" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu7.png" alt="Menú 7" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 7</h4>
-            <p>Descripción del menú 7</p>
+            <h4>Menú 7 – Informativo y periodístico</h4>
+            <p>Diseño inspirado en medios digitales. Muy útil para portales, revistas o webs con mucha información.</p>
             <input type="radio" name="menu_estilo" value="menu7" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu8.png" alt="Menú 8" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 8</h4>
-            <p>Descripción del menú 8</p>
+            <h4>Menú 8 – Personal y directo</h4>
+            <p>Menú con estilo sencillo y claro, ideal para portfolios personales, freelances y creativos.</p>
             <input type="radio" name="menu_estilo" value="menu8" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu9.png" alt="Menú 9" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 9</h4>
-            <p>Descripción del menú 9</p>
+            <h4>Menú 9 – Artístico y original</h4>
+            <p>Tipografías decorativas y una estructura muy visual. Ideal para proyectos con identidad visual fuerte.</p>
             <input type="radio" name="menu_estilo" value="menu9" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu10.png" alt="Menú 10" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 10</h4>
-            <p>Descripción del menú 10</p>
+            <h4>Menú 10 – Refinado y sutil</h4>
+            <p>Elegancia monocromática y delicada. Recomendado para diseñadores, fotógrafos o marcas premium.</p>
             <input type="radio" name="menu_estilo" value="menu10" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu11.png" alt="Menú 11" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 11</h4>
-            <p>Descripción del menú 11</p>
+            <h4>Menú 11 – Publicitario y directo</h4>
+            <p>Estilo en bloque con fondo oscuro y letras en mayúsculas. Ideal para agencias de marketing, branding o comunicación con enfoque comercial.</p>
             <input type="radio" name="menu_estilo" value="menu11" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu12.png" alt="Menú 12" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 12</h4>
-            <p>Descripción del menú 12</p>
+            <h4>Menú 12 – Informativo y cargado</h4>
+            <p>Diseño tipo portal o revista online, con menú lateral extensible. Ideal para eventos, medios o sitios con muchas categorías y contenido editorial.</p>
             <input type="radio" name="menu_estilo" value="menu12" />
           </div>
           <div class="menu-option">
             <img src="img/menus/menu13.png" alt="Menú 13" />
             <span class="zoom-icon">🔍</span>
-            <h4>Menú 13</h4>
-            <p>Descripción del menú 13</p>
+            <h4>Menú 13 – Minimalista en lateral derecho</h4>
+            <p>Menú desplegable en el lateral, muy moderno y limpio. Perfecto para agencias creativas, branding premium o páginas de presentación impactante.</p>
             <input type="radio" name="menu_estilo" value="menu13" />
           </div>
         </div>
@@ -615,92 +615,92 @@
           <div class="template-option">
             <img src="img/estilos/estilo1.png" alt="Estilo 1" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 1</h4>
-            <p>Descripción del estilo 1</p>
+            <h4>Estilo 1: Legal Nomads</h4>
+            <p>Estilo ilustrado y personal. Un diseño con ilustraciones únicas, ideal para blogs personales o marcas con identidad artesanal y cercana.</p>
             <input type="radio" name="plantilla_estilo" value="estilo1" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo2.png" alt="Estilo 2" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 2</h4>
-            <p>Descripción del estilo 2</p>
+            <h4>Estilo 2: AngelList Talent</h4>
+            <p>Minimalismo profesional. Menú claro, letras negras sobre fondo blanco. Perfecto para startups, perfiles profesionales y plataformas tecnológicas.</p>
             <input type="radio" name="plantilla_estilo" value="estilo2" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo3.png" alt="Estilo 3" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 3</h4>
-            <p>Descripción del estilo 3</p>
+            <h4>Estilo 3: TiendaNube</h4>
+            <p>E-commerce limpio y moderno. Colores vivos, jerarquía clara y diseño directo. Ideal para tiendas en línea con productos visuales y enfoque comercial.</p>
             <input type="radio" name="plantilla_estilo" value="estilo3" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo4.png" alt="Estilo 4" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 4</h4>
-            <p>Descripción del estilo 4</p>
+            <h4>Estilo 4: MelonLimón</h4>
+            <p>Estilo catálogo simple. Menú horizontal sencillo con acceso directo a productos. Perfecto para tiendas pequeñas o medianas.</p>
             <input type="radio" name="plantilla_estilo" value="estilo4" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo5.png" alt="Estilo 5" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 5</h4>
-            <p>Descripción del estilo 5</p>
+            <h4>Estilo 5: ManoSabia</h4>
+            <p>Galería visual inmersiva. Foco en la fotografía y los productos. Diseño emocional y artístico para proyectos culturales o artesanales.</p>
             <input type="radio" name="plantilla_estilo" value="estilo5" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo6.png" alt="Estilo 6" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 6</h4>
-            <p>Descripción del estilo 6</p>
+            <h4>Estilo 6: Developer Experimental</h4>
+            <p>Creatividad 3D y vanguardista. Diseño dinámico e innovador. Ideal para portfolios de diseñadores, desarrolladores creativos o marcas disruptivas.</p>
             <input type="radio" name="plantilla_estilo" value="estilo6" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo7.png" alt="Estilo 7" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 7</h4>
-            <p>Descripción del estilo 7</p>
+            <h4>Estilo 7: Zyro IA</h4>
+            <p>Tecnología clara y funcional. Menú minimalista, estructura lógica y fondo oscuro. Ideal para herramientas digitales o SaaS.</p>
             <input type="radio" name="plantilla_estilo" value="estilo7" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo8.png" alt="Estilo 8" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 8</h4>
-            <p>Descripción del estilo 8</p>
+            <h4>Estilo 8: Empire Flippers</h4>
+            <p>Marketplace profesional y estructurado. Perfecto para webs de inversión, venta de negocios o servicios premium. Estética corporativa con llamadas a la acción.</p>
             <input type="radio" name="plantilla_estilo" value="estilo8" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo9.png" alt="Estilo 9" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 9</h4>
-            <p>Descripción del estilo 9</p>
+            <h4>Estilo 9: Livestrong</h4>
+            <p>Blog editorial moderno. Diseño tipo revista digital con navegación enfocada en contenidos. Perfecto para blogs, medios o plataformas de salud y estilo de vida.</p>
             <input type="radio" name="plantilla_estilo" value="estilo9" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo10.png" alt="Estilo 10" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 10</h4>
-            <p>Descripción del estilo 10</p>
+            <h4>Estilo 10: MoonKo</h4>
+            <p>Boutique visual natural. Minimalismo y calidez. Ideal para marcas handmade, productos ecológicos o experiencias estéticas.</p>
             <input type="radio" name="plantilla_estilo" value="estilo10" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo11.png" alt="Estilo 11" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 11</h4>
-            <p>Descripción del estilo 11</p>
+            <h4>Estilo 11: Stack Overflow</h4>
+            <p>Interfaz de comunidad técnica. Diseño funcional centrado en interacción y respuestas. Ideal para foros, plataformas de soporte o conocimiento colectivo.</p>
             <input type="radio" name="plantilla_estilo" value="estilo11" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo12.png" alt="Estilo 12" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 12</h4>
-            <p>Descripción del estilo 12</p>
+            <h4>Estilo 12: The 4-Hour Workweek</h4>
+            <p>Landing de alto impacto. Diseño de conversión con personalidad y enfoque en el autor. Ideal para libros, cursos, o marca personal con alto impacto.</p>
             <input type="radio" name="plantilla_estilo" value="estilo12" />
           </div>
           <div class="template-option">
             <img src="img/estilos/estilo13.png" alt="Estilo 13" />
             <span class="zoom-icon">🔍</span>
-            <h4>Estilo 13</h4>
-            <p>Descripción del estilo 13</p>
+            <h4>Estilo 13: Weidert Group</h4>
+            <p>Agencia B2B elegante. Diseño serio pero moderno, con menús desplegables y fondo visual. Perfecto para agencias, consultoras o servicios corporativos.</p>
             <input type="radio" name="plantilla_estilo" value="estilo13" />
           </div>
         </div>
@@ -716,92 +716,92 @@
           <div class="footer-option">
             <img src="img/footer/footer1.png" alt="Footer 1" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 1</h4>
-            <p>Descripción del footer 1</p>
+            <h4>Footer 1 - Oscuro profesional</h4>
+            <p>Ideal para marcas modernas y tecnológicas. Transmite elegancia y enfoque claro con opciones rápidas de contacto.</p>
             <input type="radio" name="footer_estilo" value="footer1" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer2.png" alt="Footer 2" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 2</h4>
-            <p>Descripción del footer 2</p>
+            <h4>Footer 2 - Minimal blanco</h4>
+            <p>Diseño ultra minimalista y limpio. Perfecto para estudios creativos o marcas con enfoque artístico.</p>
             <input type="radio" name="footer_estilo" value="footer2" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer3.png" alt="Footer 3" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 3</h4>
-            <p>Descripción del footer 3</p>
+            <h4>Footer 3 - Profesional claro</h4>
+            <p>Serio y ordenado, con enfoque en estructura informativa. Ideal para consultoras, despachos o empresas B2B.</p>
             <input type="radio" name="footer_estilo" value="footer3" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer4.png" alt="Footer 4" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 4</h4>
-            <p>Descripción del footer 4</p>
+            <h4>Footer 4 - Gourmet natural</h4>
+            <p>Diseño orgánico y cálido, perfecto para marcas de alimentación, salud o productos naturales.</p>
             <input type="radio" name="footer_estilo" value="footer4" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer5.png" alt="Footer 5" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 5</h4>
-            <p>Descripción del footer 5</p>
+            <h4>Footer 5 - Estética moderna</h4>
+            <p>Diseño limpio y elegante con estructura vertical. Ideal para marcas de moda, estética o bienestar.</p>
             <input type="radio" name="footer_estilo" value="footer5" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer6.png" alt="Footer 6" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 6</h4>
-            <p>Descripción del footer 6</p>
+            <h4>Footer 6 - Personal creativo</h4>
+            <p>Diseño amigable con contacto directo y redes. Ideal para marcas personales o creadoras de contenido.</p>
             <input type="radio" name="footer_estilo" value="footer6" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer7.png" alt="Footer 7" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 7</h4>
-            <p>Descripción del footer 7</p>
+            <h4>Footer 7 - Salvaje y rebelde</h4>
+            <p>Color fuerte y diseño alternativo. Perfecto para marcas con actitud irreverente, sostenibles o de comunidad.</p>
             <input type="radio" name="footer_estilo" value="footer7" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer8.png" alt="Footer 8" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 8</h4>
-            <p>Descripción del footer 8</p>
+            <h4>Footer 8 - Futurista y creativo</h4>
+            <p>Estilo muy original con formas geométricas. Recomendado para proyectos innovadores o tiendas artísticas.</p>
             <input type="radio" name="footer_estilo" value="footer8" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer9.png" alt="Footer 9" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 9</h4>
-            <p>Descripción del footer 9</p>
+            <h4>Footer 9 - Rústico y clásico</h4>
+            <p>Ideal para negocios locales, tiendas ecológicas o granjas. Clásico y bien estructurado.</p>
             <input type="radio" name="footer_estilo" value="footer9" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer10.png" alt="Footer 10" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 10</h4>
-            <p>Descripción del footer 10</p>
+            <h4>Footer 10 - Elegante corporativo</h4>
+            <p>Líneas limpias, secciones claras. Estilo sobrio y profesional para empresas establecidas.</p>
             <input type="radio" name="footer_estilo" value="footer10" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer11.png" alt="Footer 11" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 11</h4>
-            <p>Descripción del footer 11</p>
+            <h4>Footer 11 - Informativo con newsletter</h4>
+            <p>Diseño tradicional pero con detalles únicos. Incluye inscripción y enlaces útiles.</p>
             <input type="radio" name="footer_estilo" value="footer11" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer12.png" alt="Footer 12" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 12</h4>
-            <p>Descripción del footer 12</p>
+            <h4>Footer 12 - Mapa y contacto</h4>
+            <p>Visual y funcional. Perfecto para negocios físicos que necesitan mostrar ubicación.</p>
             <input type="radio" name="footer_estilo" value="footer12" />
           </div>
           <div class="footer-option">
             <img src="img/footer/footer13.png" alt="Footer 13" />
             <span class="zoom-icon">🔍</span>
-            <h4>Footer 13</h4>
-            <p>Descripción del footer 13</p>
+            <h4>Footer 13 - Moda y estilo</h4>
+            <p>Diseño con imágenes destacadas. Ideal para marcas de ropa, diseño o influencers con enfoque visual.</p>
             <input type="radio" name="footer_estilo" value="footer13" />
           </div>
         </div>
